<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string-array name="saludador">
        <item>Selecciona uno:</item>
        <item>Hola</item>
        <item>Adios</item>
    </string-array>
    <string name="app_name">SaludoPersonalizado</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="hola">Hola</string>
    <string name="adios">Adios</string>
    <string name="enviar">Enviar</string>
    <string name="introduce">Introduce tu nombre.</string>
    <string name="saludo">Saludo</string>
    <string name="Sr">Sr</string>
    <string name="Sra">Sra</string>
    <string name="showTime">Hora</string>
    <string name="noNameMsg">Ya puede introducir un nuevo nombre</string>
    <string name="title_activity_salutation">salutation</string>

</resources>
